--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "framer-motion": "^4.1.5",
     "gatsby": "^3.2.1",
     "gatsby-plugin-image": "^1.3.1",
     "gatsby-plugin-react-helmet": "^4.3.0",
