--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^4.1.5",
     "gatsby": "^3.2.1",
     "gatsby-plugin-image": "^1.3.1",
+    "gatsby-plugin-layout": "^2.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sass": "^4.3.0",
     "gatsby-plugin-sharp": "^3.3.1",
