--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@reach/dialog": "^0.15.0",
+    "@sanity/block-content-to-react": "^2.0.7",
     "framer-motion": "^4.1.5",
     "gatsby": "^3.2.1",
     "gatsby-plugin-image": "^1.3.1",
