--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "@sanity/block-content-to-react": "^2.0.7",
     "framer-motion": "^4.1.5",
     "gatsby": "^3.2.1",
-    "gatsby-plugin-image": "^1.3.1",
+    "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-layout": "^2.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sass": "^4.3.0",
-    "gatsby-plugin-sharp": "^3.3.1",
-    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-source-filesystem": "^3.7.1",
     "gatsby-source-sanity": "^7.0.4",
-    "gatsby-transformer-sharp": "^3.3.0",
+    "gatsby-transformer-sharp": "^3.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-picker": "^1.2.17",
     "sass": "^1.32.11"
   }
 }
