--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-picker": "^1.2.17",
+    "react-responsive": "^9.0.0-beta.4",
     "sass": "^1.32.11"
   }
 }
