--- a/package.json
+++ b/package.json
@@ -17,21 +17,27 @@
   "dependencies": {
     "@reach/dialog": "^0.15.0",
     "@sanity/block-content-to-react": "^2.0.7",
+    "browser-monads": "^1.0.0",
     "framer-motion": "^4.1.5",
     "gatsby": "^3.2.1",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-layout": "^2.3.0",
+    "gatsby-plugin-postcss": "^4.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
-    "gatsby-plugin-sass": "^4.3.0",
+    "gatsby-plugin-sass": "^4.14.0",
     "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-source-sanity": "^7.0.4",
     "gatsby-transformer-sharp": "^3.7.1",
+    "postcss": "^8.2.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.32.2",
     "react-picker": "^1.2.17",
     "react-responsive": "^9.0.0-beta.4",
-    "sass": "^1.32.11"
+    "react-share": "^4.4.0",
+    "sass": "^1.43.4"
   }
 }
