--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "@reach/dialog": "^0.15.0",
     "@sanity/block-content-to-react": "^2.0.7",
     "browser-monads": "^1.0.0",
-    "framer-motion": "^4.1.5",
+    "framer-motion": "^5.3.0",
     "gatsby": "^4.2.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-layout": "^3.1.0",
     "gatsby-plugin-postcss": "^4.3.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sass": "^5.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
-    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-source-sanity": "^7.2.0",
     "gatsby-transformer-sharp": "^4.2.0",
@@ -37,6 +37,7 @@
     "react-intersection-observer": "^8.32.2",
     "react-picker": "^1.2.17",
     "react-responsive": "^9.0.0-beta.4",
+    "react-scroll": "^1.8.4",
     "react-share": "^4.4.0",
     "sass": "^1.43.4"
   }
