--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "@reach/dialog": "^0.15.0",
@@ -40,5 +41,8 @@
     "react-scroll": "^1.8.4",
     "react-share": "^4.4.0",
     "sass": "^1.43.4"
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }    
 }
