--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-transformer-sharp": "^4.2.0",
     "postcss": "^8.2.13",
     "react": "^17.0.1",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.32.2",
@@ -44,5 +45,5 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
-  }    
+  }
 }
